2019-09-21  Sam Varshavchik  <mrsam@courier-mta.com>

	* book layout manager: implement initial invocation of on_opened()
	callback.

	* focus/focusable.C: add IN_THREAD overloads for various focusable
	methods. Implement an optional ok_if_not_possible to request_focus().

2019-09-19  Sam Varshavchik  <mrsam@courier-mta.com>

	* Fix race condition resulting in a deadlock if an exception
	gets thrown in main window's creator.

	* uixml: <container>s may also specify optional tooltips and
	context popup menus.

2019-09-18  Sam Varshavchik  <mrsam@courier-mta.com>

	* image_button: Implement IN_THREAD overloads for set_value().

2019-09-16  Sam Varshavchik  <mrsam@courier-mta.com>

	* Specify keyboard shortcuts for menus.

0.25

2019-07-07  Sam Varshavchik  <mrsam@courier-mta.com>

	* Fix menu popup visibility.

2019-07-05  Sam Varshavchik  <mrsam@courier-mta.com>

	* Add creators lambda map to uielements.

2019-07-04  Sam Varshavchik  <mrsam@courier-mta.com>

	* Generate border containers using the theme file.

	* Generate page containers using the theme file.

	* Clean up <halign> and <valign> elements in theme files, removing
	their redundant level.

	* Generate toolbox containers using the theme file.

2019-07-02  Sam Varshavchik  <mrsam@courier-mta.com>

	* Generate item containers using the theme file.

2019-06-29  Sam Varshavchik  <mrsam@courier-mta.com>

	* Generate pane containers using the theme file.

2019-06-28  Sam Varshavchik  <mrsam@courier-mta.com>

	* Generate tables using the theme file.

2019-06-26  Sam Varshavchik  <mrsam@courier-mta.com>

	* table.C: Fix show_all() on a table.

2019-06-25  Sam Varshavchik  <mrsam@courier-mta.com>

	* Generate context popup menus using the theme file.

2019-06-24  Sam Varshavchik  <mrsam@courier-mta.com>

	* Generate menu items using the theme file.

2019-06-21  Sam Varshavchik  <mrsam@courier-mta.com>

	* Create combo-boxes using the theme file.

2019-06-20  Sam Varshavchik  <mrsam@courier-mta.com>
