@@ -1,3 +1,8 @@
+2019-09-22  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* input_field/input_field.C: add validate_modified(); do not
+	validate disabled fields.
+
 2019-09-21  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* book layout manager: implement initial invocation of on_opened()
